// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemBase snapshot should match snapshot 1`] = `
<ListItemBase>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with className 1`] = `
<ListItemBase
  className="example-class"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="example-class md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with empty list item 1`] = `
<ListItemBase>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        aria-hidden="true"
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      />
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with focusChild 1`] = `
<ListItemBase
  focusChild={true}
>
  <li
    className="md-list-item-base-wrapper"
    data-disabled={false}
    data-interactive={false}
    data-padded={false}
    data-shape="rectangle"
    data-size={40}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="listitem"
    tabIndex={-1}
  >
    <ButtonPill>
      <ButtonSimple
        aria-disabled={false}
        className="md-button-pill-wrapper"
        data-color="primary"
        data-disabled={false}
        data-ghost={false}
        data-grown={false}
        data-inverted={false}
        data-outline={false}
        data-shallow-disabled={false}
        data-size={40}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-button-pill-wrapper md-button-simple-wrapper"
              data-color="primary"
              data-disabled={false}
              data-ghost={false}
              data-grown={false}
              data-inverted={false}
              data-outline={false}
              data-shallow-disabled={false}
              data-size={40}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span>
                Test
              </span>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </ButtonPill>
  </li>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with id 1`] = `
<ListItemBase
  id="example-id"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        id="example-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with interactive=false 1`] = `
<ListItemBase
  interactive={false}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={false}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isDisabled 1`] = `
<ListItemBase
  isDisabled={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={true}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isSelected 1`] = `
<ListItemBase
  isSelected={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper active"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with lang 1`] = `
<ListItemBase
  lang="en-US"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        lang="en-US"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with role 1`] = `
<ListItemBase
  role="role"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="role"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with shape 1`] = `
<ListItemBase
  shape="isPilled"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="isPilled"
        data-size={50}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with size 1`] = `
<ListItemBase
  size={40}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with style 1`] = `
<ListItemBase
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        style={
          Object {
            "color": "pink",
          }
        }
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;
